infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-pos
spec:
  rules:
    - host: mobilepos.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-node
                port:
                  number: 80
